# Charging-Stations-Network

./: README.md
Backend/: README.md
IoT-esp32/: .gitignore  README.md  sdkconfig
IoT-esp32/main/: CMakeLists.txt  StationStates.h  global.c  global.h  https_client.c  https_client.h  https_server.c  main.c  upload_login_script.html  upload_script.html
IoT-esp32/main/certs/: cacert.pem  cert.pem  prvtkey.pem
Mobile-Android/: README.md
Mobile-IOS/: README.md
Mobile-UWP/: README.md
Mobile-UWP/ChargingStationsApp/: ChargingStationsApp.sln
Mobile-UWP/ChargingStationsApp/ChargingStationsApp/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  ChargingStationsApp.csproj
Mobile-UWP/ChargingStationsApp/ChargingStationsApp.UWP/: App.xaml  App.xaml.cs  ChargingStationsApp.UWP.csproj  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
Mobile-UWP/ChargingStationsApp/ChargingStationsApp.UWP/Properties/: AssemblyInfo.cs
Mobile-UWP/ChargingStationsApp/ChargingStationsApp/Enums/: SortBy.cs  SortOrder.cs  StationState.cs
Mobile-UWP/ChargingStationsApp/ChargingStationsApp/Extensions/: AlertExtensions.cs  StringExtensions.cs
Mobile-UWP/ChargingStationsApp/ChargingStationsApp/Localization/: ILocalize.cs  Localize.cs  TranslateExtension.cs
Mobile-UWP/ChargingStationsApp/ChargingStationsApp/Models/: ConnectorType.cs  Item.cs  LocalizedOption.cs  MappedStation.cs  SearchOptions.cs  Session.cs  Station.cs  Tariff.cs  Transaction.cs  User.cs
Mobile-UWP/ChargingStationsApp/ChargingStationsApp/Resources/: Lang.en-US.Designer.cs  (+2 more)
Resources/: README.md
(+95 files in other folders)
